[package]
name = "sz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.19.8"

[dependencies]
lalrpop-util = { version = "0.19.8", features = ["lexer"] }
nom = "7.1.1"
regex = "1.7.0"
thiserror = "1.0.37"
